infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shaj-ecom
  labels:
    app: shaj-ecom
    environment: production
